# cuhk_ai_project_3

./: .gitignore  predict.py  project_tasks.py  pyproject.toml  run.py  train.py  utils.py
.github/workflows/: project3-experiments.yml  project3-gpu-self-hosted.yml
THUCNews/data/: dev.txt  test.txt  train.txt
models/: Transformer.py
