[project]
name = "project-3-transformer"
version = "0.1.0"
description = "CSC 5010 Project 3 Transformer text classification"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "tqdm>=4.66",
]

[tool.uv]
package = false
